--- a/Practical06/src/main/java/twoArrays/htmlReport/index_SORT_BY_CLASS.html
+++ b/Practical06/src/main/java/twoArrays/htmlReport/index_SORT_BY_CLASS.html
@@ -8,8 +8,8 @@
     @import "./css/coverage.css";
     @import "./css/idea.min.css";
   </style>
-  <script type="text/javascript" src="./js/highlight.min.js"></script>
-  <script type="text/javascript" src="./js/highlightjs-line-numbers.min.js"></script>
+  <script type="text/javascript" src="js/highlight.min.js"></script>
+  <script type="text/javascript" src="js/highlightjs-line-numbers.min.js"></script>
 </head>
 
 <body>
@@ -72,21 +72,21 @@ Current scope:     all classes
   <th class="name  
 ">
 <a href="index.html">Package</a>  </th>
-<th class="coverageStat 
+<th class="coverageStat sortedAsc
 ">
-  <a href="index_SORT_BY_CLASS.html">Class, %</a>
+  <a href="index_SORT_BY_CLASS_DESC.html">Class, %</a>
 </th>
 <th class="coverageStat 
 ">
   <a href="index_SORT_BY_METHOD.html">Method, %</a>
 </th>
-<th class="coverageStat sortedAsc
+<th class="coverageStat 
 ">
-  <a href="index_SORT_BY_LINE_DESC.html">Line, %</a>
+  <a href="index_SORT_BY_LINE.html">Line, %</a>
 </th>
 </tr>
   <tr>
-    <td class="name"><a href="ns-1/index_SORT_BY_LINE.html">twoArrays</a></td>
+    <td class="name"><a href="ns-1/index_SORT_BY_CLASS.html">twoArrays</a></td>
 <td class="coverageStat">
   <span class="percent">
     50%
