--- a/Practical06/src/main/java/twoArrays/htmlReport/index_SORT_BY_BLOCK.html
+++ b/Practical06/src/main/java/twoArrays/htmlReport/index_SORT_BY_BLOCK.html
@@ -8,8 +8,8 @@
     @import "./css/coverage.css";
     @import "./css/idea.min.css";
   </style>
-  <script type="text/javascript" src="./js/highlight.min.js"></script>
-  <script type="text/javascript" src="./js/highlightjs-line-numbers.min.js"></script>
+  <script type="text/javascript" src="js/highlight.min.js"></script>
+  <script type="text/javascript" src="js/highlightjs-line-numbers.min.js"></script>
 </head>
 
 <body>
@@ -69,7 +69,7 @@ Current scope:     all classes
 
 <table class="coverageStats">
 <tr>
-  <th class="name  sortedDesc
+  <th class="name  
 ">
 <a href="index.html">Package</a>  </th>
 <th class="coverageStat 
@@ -86,7 +86,7 @@ Current scope:     all classes
 </th>
 </tr>
   <tr>
-    <td class="name"><a href="ns-1/index_SORT_BY_NAME_DESC.html">twoArrays</a></td>
+    <td class="name"><a href="ns-1/index_SORT_BY_BLOCK.html">twoArrays</a></td>
 <td class="coverageStat">
   <span class="percent">
     50%
