--- a/Practical06/src/main/java/twoArrays/htmlReport/index_SORT_BY_LINE_DESC.html
+++ b/Practical06/src/main/java/twoArrays/htmlReport/index_SORT_BY_LINE_DESC.html
@@ -8,8 +8,8 @@
     @import "./css/coverage.css";
     @import "./css/idea.min.css";
   </style>
-  <script type="text/javascript" src="./js/highlight.min.js"></script>
-  <script type="text/javascript" src="./js/highlightjs-line-numbers.min.js"></script>
+  <script type="text/javascript" src="js/highlight.min.js"></script>
+  <script type="text/javascript" src="js/highlightjs-line-numbers.min.js"></script>
 </head>
 
 <body>
@@ -80,13 +80,13 @@ Current scope:     all classes
 ">
   <a href="index_SORT_BY_METHOD.html">Method, %</a>
 </th>
-<th class="coverageStat 
+<th class="coverageStat sortedDesc
 ">
   <a href="index_SORT_BY_LINE.html">Line, %</a>
 </th>
 </tr>
   <tr>
-    <td class="name"><a href="ns-1/index_SORT_BY_BLOCK.html">twoArrays</a></td>
+    <td class="name"><a href="ns-1/index_SORT_BY_LINE_DESC.html">twoArrays</a></td>
 <td class="coverageStat">
   <span class="percent">
     50%
